# rust-axum-prac-sample

./: Cargo.toml  README.md
manuals/: manuals.md  rls.md  transaction.md
src/: lib.rs  main.rs
src/di/: container.rs  mod.rs
src/di/handlers/: user_handler.rs
src/di/repositories/: mod.rs  user_repository.rs
src/di/repositories/tests/: helpers.rs  mod.rs  user_repository_01_test.rs  user_repository_02_test.rs
src/di/routers/: user_router.rs
src/di/services/: mod.rs  user_di_service.rs
src/errors/: mod.rs
src/errors/auth/: auth_error.rs  mod.rs
src/errors/users/: mod.rs  user_error.rs
src/models/: mod.rs
src/models/auth/: auth.rs  mod.rs
src/models/common/: common.rs  mod.rs
src/models/users/: mod.rs  users.rs
src/routes/: mod.rs
src/routes/auth/: auth_routes.rs  mod.rs
src/routes/users/: mod.rs  user_routes.rs
src/services/: mod.rs
src/services/auth/: auth_services.rs  mod.rs
src/services/users/: mod.rs  user_services.rs
src/state/: app_state.rs  mod.rs
tests/: user_services_integration_01_test.rs  user_services_integration_02_test.rs
