[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# フレームワーク
axum = { version = "0.7", features = ["macros"] } 
# 非同期処理
tokio = { version = "1.0", features = ["full"] }
# シリアライズ
serde = { version = "1.0", features = ["derive"] }
# JSON
serde_json = "1.0"
# JWT
jsonwebtoken = "8.1"
# HTTPクライアント
reqwest = { version = "0.11", features = ["json"] }
# 環境変数
dotenv = "0.15"
# UUID
uuid = { version = "1.2", features = ["v4", "serde"] }
# 日付
chrono = { version = "0.4", features = ["serde"] }
# エラーハンドリング
thiserror = "1.0"
# ハッシュ化
bcrypt = "0.15"
# async-trait
async-trait = "0.1"
# OpenAPI
utoipa = { version = "4", features = ["axum_extras"] }
# Swagger UI
utoipa-swagger-ui = { version = "6", features = ["axum"] }
# 非同期処理
futures-util = "0.3"

[dev-dependencies]
# Mock
mockall = "0.11"
# async-trait
async-trait = "0.1"
# 非同期処理
tokio = { version = "1.0", features = ["full", "test-util"] }
# HTTP
http = "0.2"
# URL
url = "2.2"
# Tower
tower = { version = "0.4", features = ["util"] }
# HTTPクライアント
hyper = { version = "0.14", features = ["full"] }
# 環境変数
dotenv = "0.15"
futures-util = "0.3"
# バイト列
bytes = "1.0"
# Mock
mockito = "1.0"
